--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,6 @@ docker>=6.0.0  # To manage Docker execution via Python API
 
 # 🔹 New Addition: Language Detection (Replacing GitHub Linguist)
 pygments>=2.16.0  # Python-based syntax highlighter, used for language detection
+
+# 🔹 New Addition: Web Search for License Retrieval
+tavily-python>=0.5.1
