--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ gitpython>=3.1.30  # To interface with Git repositories if needed
 pydantic>=2.0.0  # For structured data validation
 python-dotenv>=1.0.0  # For managing environment variables (AWS Secrets, etc.)
 
+docx>=0.2.4  # ✅ Added for DOCX generation
+python-docx>=0.8.11  # ✅ Required for generating Open Source Declaration
+
 # Testing & Logging
 pytest>=7.2.2  # For writing unit tests
 pytest-mock>=3.10.0  # Mock subprocess calls (e.g., mock Docker execution)
